@@ -1,0 +1,5 @@
+pedromdir = $(pkgdatadir)/pedrom
+dist_pedrom_DATA = pedrom*.tib
+
+romcallsdir = $(pkgdatadir)
+dist_romcalls_DATA = romcalls.*
